...
                                                        <constraint firstAttribute="width" secondItem="rAy-FQ-LV1" secondAttribute="height" multiplier="1:1" id="PuM-Y0-hNw"/>
                                                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="124" id="knX-iG-CWB"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="na0-V9-7aO">
                                                    <rect key="frame" x="152" y="26" width="215" height="23"/>
                                                    <accessibility key="accessibilityConfiguration" label="artist.title"/>
                                                    <fontDescription key="fontDescription" type="system" weight="black" pointSize="19"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cyx-Wj-xH1">
                                                    <rect key="frame" x="152" y="119.5" width="215" height="21"/>
...
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y1S-Nx-aPr">
                                                    <rect key="frame" x="8" y="17" width="359" height="62"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Muse" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c4a-aL-d53">
                                                    <rect key="frame" x="8" y="85" width="359" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" label="album.title"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="CbE-D7-T4q"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
...
                                    <constraint firstItem="Ae0-8x-bzt" firstAttribute="leading" secondItem="wr0-6y-SxF" secondAttribute="leading" id="ecw-J2-mQg"/>
                                    <constraint firstItem="Wmx-ei-h17" firstAttribute="leading" secondItem="wr0-6y-SxF" secondAttribute="leading" id="rqR-iN-SC5"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EZf-vO-8oy">
                                <rect key="frame" x="92" y="36" width="267" height="68"/>
                                <accessibility key="accessibilityConfiguration" label="artist.title.detail"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NmO-EM-CNh">
                                <rect key="frame" x="16" y="36" width="68" height="68"/>
...
