...
    fileprivate var searchBarController: SearchBarController!
    fileprivate var activityIndicatorView: NVActivityIndicatorView!
    @IBOutlet fileprivate var noResultsView: UIView!
    @IBOutlet weak var collectionView : UICollectionView!

    override func viewDidLoad() {
        searchBarController = SearchBarController(self, placeHolder: "Search Artist")
        searchBarController.onTextDidClear = { [weak self] in
            self?.clearSearch()
        }
        searchBarController.onDidClickSearchButton = { [weak self] in
            self?.search($0)
        }
...
        button.isEnabled = false
        
        switch section {
        case .topArtist(_, _):
            button.setTitle("Top Artist", for: .normal)
        case .artist(_, _):
            button.setTitle("Artists >", for: .normal)
            button.isEnabled = true
            button.addTarget(self, action: #selector(presentArtists), for: .touchUpInside)
        case .albums(_, _):
            button.setTitle("Albums", for: .normal)
        }
        
...
