...
            let path = Bundle.main.path(forResource: "SearchResponse", ofType: "json")
            let json = try! Data.init(contentsOf: URL(fileURLWithPath: path!))
            let searchList = try! JSONDecoder().decode(SearchList.self, from: json) as SearchList
            
            return MockSearchService(testOption: .success(searchList))
        } else if CommandLine.arguments.contains("--MockSearchService-Failure") {
            return MockSearchService(testOption: .failure("Mock Failure"))
        } else if CommandLine.arguments.contains("--MockSearchService-NoInternet") {
            return MockSearchService(testOption: .noInternetConnection)
        }
        
        return SearchWebService()
    }
...
